--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
 
             <div class="houses">
                
-                <div id="for-sale">
+                <div>
                     
                 <h1>Realtors database</h1>
+                <button id="for-sale">View houses</button>
                 </div>
             </div>
    
